IGNITE-22380 Add Windows start script (#3848)