@@ -55,35 +55,87 @@ dependencies {
     defaultsGenerator project(path: ':ignite-runner', configuration: 'defaultsGenerator')
 }
 
+def addOpens = '--add-opens java.base/java.lang=ALL-UNNAMED' +
+        ' --add-opens java.base/java.lang.invoke=ALL-UNNAMED' +
+        ' --add-opens java.base/java.lang.reflect=ALL-UNNAMED' +
+        ' --add-opens java.base/java.io=ALL-UNNAMED' +
+        ' --add-opens java.base/java.nio=ALL-UNNAMED' +
+        ' --add-opens java.base/java.math=ALL-UNNAMED' +
+        ' --add-opens java.base/java.util=ALL-UNNAMED' +
+        ' --add-opens java.base/jdk.internal.misc=ALL-UNNAMED' +
+        ' --add-opens java.base/jdk.internal.access=ALL-UNNAMED' +
+        ' --add-opens java.base/sun.nio.ch=ALL-UNNAMED'
+
 def tokens = [
         PRODUCT_NAME        : 'ignite3db',
         PACKAGE_NAME        : 'ignite3-db',
         PRODUCT_DISPLAY_NAME: 'Apache Ignite',
         APP_JAR             : "${project(':ignite-runner').name}-${project(':ignite-runner').version}.jar".toString(),
         MAIN_CLASS          : 'org.apache.ignite.internal.app.IgniteRunner',
+        ADD_OPENS           : addOpens
+]
+
+def tokensLin = tokens + [
         VARS_FILE_NAME      : 'vars.env',
         BOOTSTRAP_FILE_NAME : 'bootstrap-functions.sh',
         SETUP_JAVA_FILE_NAME: 'setup-java.sh'
 ]
 
-// ZIP packaging
-
-def zipStartScriptTokens = tokens + [
-        LOG_DIR             : '${IGNITE_HOME}/log',
-        APP_LOG_DIR         : 'log', // java logging does not support env variables, using relative path here
-        LIB_DIR             : '${IGNITE_HOME}/lib',
-        CONF_DIR            : '${IGNITE_HOME}/etc',
-        INSTALL_DIR         : '${IGNITE_HOME}'
+def tokensWin = tokens + [
+        VARS_FILE_NAME  : 'vars.bat',
+        BOOTSTRAP_FILE_NAME : 'bootstrap-functions.bat'
 ]
 
-task replaceZipScriptVars(type: Copy) {
-    from "$rootDir/packaging/common"
-    from "$rootDir/packaging/zip"
+// ZIP packaging
+
+def zipStartScriptTokensCommon = [
+        APP_LOG_DIR         : 'log', // java logging does not support env variables, using relative path here
+]
+
+def zipStartScriptTokensLin = tokensLin + [
+        LOG_DIR             : '${IGNITE_HOME}/log',
+        LIB_DIR             : '${IGNITE_HOME}/lib',
+        CONF_DIR            : '${IGNITE_HOME}/etc',
+        INSTALL_DIR         : '${IGNITE_HOME}',
+]
+
+def zipStartScriptTokensWin = tokensWin + [
+        LOG_DIR         : '%IGNITE_HOME%\\log',
+        LIB_DIR         : '%IGNITE_HOME%\\lib',
+        CONF_DIR        : '%IGNITE_HOME%\\etc',
+        INSTALL_DIR     : '%IGNITE_HOME%',
+]
+
+task replaceZipScriptVarsCommon(type: Copy) {
     from "$rootDir/packaging/db/ignite.java.util.logging.properties"
 
-    filter(ReplaceTokens, tokens: zipStartScriptTokens)
+    filter(ReplaceTokens, tokens: zipStartScriptTokensCommon)
 
     into "$buildDir/zip/"
+}
+
+task replaceZipScriptVarsLin(type: Copy) {
+    from "$rootDir/packaging/common/lin"
+    from "$rootDir/packaging/zip/lin"
+
+    filter(ReplaceTokens, tokens: zipStartScriptTokensLin)
+
+    into "$buildDir/zip/"
+}
+
+task replaceZipScriptVarsWin(type: Copy) {
+    from "$rootDir/packaging/common/win"
+    from "$rootDir/packaging/zip/win"
+
+    filter(ReplaceTokens, tokens: zipStartScriptTokensWin)
+
+    into "$buildDir/zip/"
+}
+
+tasks.register('replaceZipScriptVars') {
+    dependsOn replaceZipScriptVarsCommon
+    dependsOn replaceZipScriptVarsLin
+    dependsOn replaceZipScriptVarsWin
 }
 
 def copyConfig = tasks.register('copyConfig', Copy) {
@@ -118,18 +170,21 @@ distributions {
                 from "$rootDir/assembly/README.md"
             }
             into('etc') {
-                from "$buildDir/zip/${zipStartScriptTokens.VARS_FILE_NAME}"
+                from "$buildDir/zip/${zipStartScriptTokensLin.VARS_FILE_NAME}"
+                from "$buildDir/zip/${zipStartScriptTokensWin.VARS_FILE_NAME}"
                 from generateConfigDefaults
                 from "$buildDir/zip/ignite.java.util.logging.properties"
             }
             into('bin') {
                 fileMode 0755
                 from "$buildDir/zip/ignite3db"
+                from "$buildDir/zip/ignite3db.bat"
             }
             into('lib') {
                 from configurations.dbArtifacts
-                from "$buildDir/zip/${zipStartScriptTokens.BOOTSTRAP_FILE_NAME}"
-                from "$buildDir/zip/${zipStartScriptTokens.SETUP_JAVA_FILE_NAME}"
+                from "$buildDir/zip/${zipStartScriptTokensLin.BOOTSTRAP_FILE_NAME}"
+                from "$buildDir/zip/${zipStartScriptTokensLin.SETUP_JAVA_FILE_NAME}"
+                from "$buildDir/zip/${zipStartScriptTokensWin.BOOTSTRAP_FILE_NAME}"
             }
         }
     }
@@ -137,6 +192,7 @@ distributions {
 
 distZip.dependsOn replaceZipScriptVars
 distTar.dependsOn replaceZipScriptVars
+installDist.dependsOn replaceZipScriptVars
 
 task createChecksums(type: Checksum) {
     dependsOn distZip
@@ -157,7 +213,7 @@ tasks.register('signDbZip', Sign) {
 
 // RPM/DEB packaging
 
-def packageTokens = tokens + [
+def packageTokens = tokens + tokensLin + [
         USERNAME            : 'ignite3',
         GROUPNAME           : 'ignite3',
         INSTALL_DIR         : '/usr/share/ignite3db',
@@ -226,8 +282,8 @@ ospackage {
 
         into('lib') {
             from configurations.dbArtifacts
-            from "$buildDir/linux/${zipStartScriptTokens.BOOTSTRAP_FILE_NAME}"
-            from "$buildDir/linux/${zipStartScriptTokens.SETUP_JAVA_FILE_NAME}"
+            from "$buildDir/linux/${zipStartScriptTokensCommon.BOOTSTRAP_FILE_NAME}"
+            from "$buildDir/linux/${zipStartScriptTokensCommon.SETUP_JAVA_FILE_NAME}"
         }
 
         into('etc') {
